--- a/employ_app/templates/contact.html
+++ b/employ_app/templates/contact.html
@@ -24,7 +24,8 @@
  <div>
   <main>
     <center><h2>Contact Us</h2></center>
-    <form action="#" method="post">
+    <form action="{%url 'contact'%}" method="POST">
+      {% csrf_token %}
       <label for="name">Your Name:</label>
       <input type="text" id="name" name="name" required>
 
